# neuroblocks

./: .gitignore  Readme.md  pyproject.toml  requirements.txt  setup.py
NeuroBlocks/: readme.md
NeuroBlocks/data_loading/: parcellation_loaders.py  readme.md
NeuroBlocks/data_preparation/: parcellation_tools.py
NeuroBlocks/feature_extraction/: suvr_to_cl.py
NeuroBlocks/plotting/: plots_brain.py
atlases/DBS80/: dbs80symm_labels.txt
atlases/Diedrichsen_2009_atlas/: atl-Anatom.lut
atlases/cerebellar_masks/: Diedrichsen_IGM_space-MNI_bin.nii
neuroblocks/: _version.py
neuroblocks/atlases/Diedrichsen_2009_atlas/: atl-Anatom_space-MNI_dseg.nii
neuroblocks/atlases/cerebellar_masks/: Diedrichsen_GM_space-MNI_bin.nii
neuroblocks/data_loading/: loader.py  parcellation_loaders.py
neuroblocks/data_preparation/: data_formatting.py  parcellation_tools.py  readme.md
neuroblocks/feature_extraction/: bold_features.py  nifti_roi_computations.py  pet_tau.py  suvr_to_cl.py
neuroblocks/pipelines/: readme.md
neuroblocks/plotting/: boxplots_and_stats.py  plot_brain_renders.py  plots_brain.py
neuroblocks/plotting/surface_brain_renders/: render_patch.m  rendersurface_atlas.m
neuroblocks/plotting/surface_brain_renders/atlas_surfaces/: README.txt
neuroblocks/stats/: outlier_management.py  stat_tests.py
src/: __init__.py  manage_paths.py
src/neuroblocks/bids_utils/: participants_utils.py
src/neuroblocks/data_preparation/: parcellation_tools.py
src/neuroblocks/feature_extraction/: readme.md  suvr_to_cl.py
src/neuroblocks/plotting/: readme.md
src/neuroblocks/stats/: outlier_management.py
studies/: readme.md
